update: fixed dark mode background pattern, modified back btn and code blocks

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,11 @@
 @import "tailwindcss";
 
 :root {
-  --background: #fcffe0;
+  --background: #f8f8f8;
   --foreground: #171717;
 }
 
 @theme inline {
-  --color-gray-white: #fcffe0;
   --color-light-green: #c8e4b2;
   --color-dark-green: #618264;
 
